--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,113 @@
-Welcome home
+<section class="container-fluid" id="section1">
+    <div class="v-center">
+        <h1 class="text-center">Learn Better</h1>
+        <h2 class="text-center lato animate slideInDown">Join now to track your <b>Learning</b></h2>
+        <p class="text-center">
+            <br>
+            <a href="#" class="btn btn-danger btn-lg btn-huge lato" data-toggle="modal" data-target="#myModal">Join today for free</a>
+        </p>
+    </div>
+    <a href="#section2">
+		<div class="scroll-down bounceInDown animated">
+            <span>
+                <i class="fa fa-angle-down fa-2x"></i>
+            </span>
+		</div>
+        </a>
+</section>
+
+<section class="container-fluid" id="section2">
+ <h2 style="text-align: center"><p>Learning simplified in 3 easy steps.</p></h2>
+    <div class="container v-center">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <div class="panel panel-default slideInLeft animate">
+                            <div class="panel-heading">
+                            <h3>Step 1</h3></div>
+                            <div class="panel-body">
+                                <p>Sign up by providing your information. Use the information to sign in. After that search through the courses to find the course that you are about to take. Add the courses to your course list.</p>
+                                <hr>GO
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 text-center">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <div class="panel panel-default slideInUp animate">
+                            <div class="panel-heading">
+                            <h3>Step 2</h3></div>
+                            <div class="panel-body">
+                                <p>Take a pre-test before starting the course. This will give you
+                                rough idea of what you are about to learn in the course and also help you see if you already have the knowledge.</p>
+                                <hr>GO
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 text-center">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <div class="panel panel-default slideInRight animate">
+                            <div class="panel-heading">
+                            <h3>Step 3</h3></div>
+                            <div class="panel-body">
+                                <p>Take the test again after completing the course. This will give you an idea
+                                of how taking the course has transformed your understanding about the course materials. Evaluate your strenghts and weaknesses.</p>
+                                <hr>GO
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/row-->
+        <div class="row">
+            <br>
+        </div>
+    </div>
+    <!--/container-->
+</section>
+
+<section class="container-fluid" id="section3">
+    <h1 class="text-center">What motivates me??</h1>
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <h3 class="text-center lato slideInUp animate">Students with <em>Smiling</em> faces.</h3>
+            <br>
+            <div class="row">
+                <div class="col-xs-4 col-xs-offset-1">If you like what I am doing please leave me a 
+                message.</div>
+                <div class="col-xs-2"></div>
+                <div class="col-xs-4 text-right">If you have any suggestions for me. Please leave me a message.</div>
+            </div>
+            <br>
+            <p class="text-center">
+                <img src="http://www.miccd.org/wp-content/uploads/2014/03/smiling-student.jpg" class="img-responsive thumbnail center-block ">
+            </p>
+        </div>
+    </div>
+</section>
+
+
+<section class="container-fluid" id="section7">
+    <div class="row">
+        <!--fontawesome icons-->
+        <div class="col-sm-2 col-sm-offset-3 col-xs-4 text-center">
+            <a href="https://github.com/sakshyamdahal"class="fa fa-github fa-4x"></a>
+        </div>
+        <div class="col-sm-2 col-xs-4 text-center">
+            <a href = "https://www.facebook.com/sakshamdahal"class="fa fa-facebook fa-4x"></a>
+        </div>
+        <div class="col-sm-2 col-xs-4 text-center">
+            <a href="https://twitter.com/sakshyamdahal" class="fa fa-twitter fa-4x"></a>
+        </div>
+    </div>
+</section>
