--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,9 @@
 <section class="container-fluid" id="section1">
     <div class="v-center">
         <h1 class="text-center">Learn Better</h1>
+        <% if user_signed_in? %>
+        <%= current_user.email %>
+        <% end %>
         <h2 class="text-center lato animate slideInDown">Join now to track your <b>Learning</b></h2>
         <p class="text-center">
             <br>
@@ -13,7 +16,7 @@
                 <i class="fa fa-angle-down fa-2x"></i>
             </span>
 		</div>
-        </a>
+    </a>
 </section>
 
 <section class="container-fluid" id="section2">
