--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -14,25 +14,48 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h2 class="text-center"><img src="//placehold.it/110" class="img-circle"><br>Login</h2>
+                <h2 class="text-center"><img src="http://upload.wikimedia.org/wikipedia/meta/thumb/4/4d/Wikibooks_firehazard07_v1.png/200px-Wikibooks_firehazard07_v1.png" class="img-circle"><br/>Welcome</h2>
             </div>
             <div class="modal-body row">
+
+            <div class="loginForm">
+                <h6 class="text-center">COMPLETE THESE FIELDS TO LOGIN</h6>
+                <%= form_for(:user, :url => session_path(:user), html: { class: "col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0"}) do |f| %>
+                
+                  <%= f.text_field :email, class: "form-control input-lg", :placeholder => "Email" %>
+                  <br/>
+                  <%= f.password_field :password, class: "form-control input-lg", :placeholder => "Password" %>
+                  <br/>
+                  <%= f.check_box :remember_me %>
+                  <%= f.label :remember_me %>
+                  <br />
+                  <%= f.submit 'Sign in', class: "btn btn-danger btn-lg btn-block" %>
+                  <%= link_to "Forgot your password?", "#" %>
+                  <span class="pull-right"><%= link_to "New user? Register!","javascript:void(0);", :id => "loginUser" %> </span>
+                <% end %>
+                </div>
+
+            <div class="registrationForm">
                 <h6 class="text-center">COMPLETE THESE FIELDS TO SIGN UP</h6>
-                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
-                    <div class="form-group">
-                        <input type="text" class="form-control input-lg" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control input-lg" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-danger btn-lg btn-block">Sign In</button>
-                        <span class="pull-right"><a href="#">Register</a></span><span><a href="#">Need help?</a></span>
-                    </div>
-                </form>
+                <%= form_for(:user, :url => registration_path(:user), html: { class: "col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0"}) do |f| %>
+                
+                  <%= f.text_field :email, class: "form-control input-lg", :placeholder => "Email" %>
+                  <br/>
+                  <%= f.password_field :password, class: "form-control input-lg", :placeholder => "Password" %>
+                  <br/>
+                  <%= f.password_field :password_confirmation, class: "form-control input-lg", autocomplete: "off", :placeholder => "Password confirmation" %>
+                  <br />
+                  <%= f.submit 'Sign up', class: "btn btn-danger btn-lg btn-block" %>
+                  <span class="pull-right"><%= link_to "Login instead.","javascript:void(0);", :id => "newUserRegistration" %> </span>
+                <% end %>
+            </div>
+
+
+
+
             </div>
             <div class="modal-footer">
-                <h6 class="text-center"><a href="">Privacy is important to us. Click here to read why.</a></h6>
+                <h6 class="text-center">Happy surfing!!</h6>
             </div>
         </div>
     </div>
