--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,17 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
   
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag "styles" %>
-  <%= javascript_include_tag "scripts"%>
+  <%= javascript_include_tag "scripts" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render 'layouts/header' %>
-<%= yield %>
-<%= render 'layouts/footer' %>
+  <%= render 'layouts/header' %>
+  <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class: 'alert alert-info') %>
+  <% end %>
+  <%= yield %>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
