add test questions options

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -213,4 +213,24 @@ footer .nav>li>a:hover {
 }
 
 
+.panel-heading{
+  text-align: center;
+}
 
+.panel-body {
+  color: black;
+}
+
+a.hover{
+  background-color: white;
+}
+
+.centerText {
+  text-align: center;
+}
+
+.alert{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
