--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,21 +10,18 @@
             <%= link_to "S-L-O", root_path, class: "navbar-brand text-danger" %>
         </div>
         <div class="navbar-collapse collapse" id="navbar-collapsible">
-            <ul class="nav navbar-nav navbar-left">
+           
+            <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
                   <li class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to "Edit profile", edit_user_registration_path %></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
                 <% else %>
-                  <li class="<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign in", new_user_session_path %></li>
+                  <li class="<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign in", "#", :data => {:toggle=>"modal", :target=>"#myModal"} %></li>
                 <% end %>
-                <li><%= link_to "About", root_path %></li>
-                <li><%= link_to "Hello", root_path %></li>
-                <li><%= link_to "People", root_path %></li>
                 <li>&nbsp;</li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-heart-o fa-lg"></i></a></li>
             </ul>
         </div>
     </div>
 </nav>
+
+
