--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -148,7 +148,7 @@
               <% score = Score.where(user_id: current_user.id, test_id: t.id) %>
 
               <% if score.size != 0 %>
-              <button type="button" class="btn btn-lg btn-primary btn-block" disabled="disabled">Score: <%= score[0].percentage %>%</button>
+              <button type="button" class="btn btn-lg btn-primary btn-block" disabled="disabled">Score: <%= number_with_precision(score[0].percentage , :precision => 2)%>%</button>
               <% else %>
               <%= link_to "Take Quiz", take_quiz_take_path(quiz_id: t), class: "btn btn-primary btn-lg btn-block" %>
               <% end %>
